# -football_analyzer

./: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_IMPROVEMENT_PLAN.md  README.md  SYSTEM_REVIEW_REPORT.md  fix_html_encoding.py  fix_mypy_errors.py  pyproject.toml
.github/workflows/: ci.yml
archive/: AI_NATIVE_ARCHITECTURE_SUMMARY.md  AI_NATIVE_OPTIMIZATION_SUMMARY.md  COMPLETE_PROFESSIONAL_SYSTEM_SUMMARY.md  FINAL_COMPLETE_SUMMARY.md
archive/agents_v1/: ai_quant_researcher.py  auto_tuner_agent.py  daemon_monitor.py  dynamic_risk_judge.py
archive/agents_v1/graphs/: __init__.py  evolution.py  extended_agents.py  nodes.py  persistence.py  pre_match_graph.py  state.py
archive/agents_v1/llm/: __init__.py  agents.py  config.py  config_example.py  ollama_client.py  prompts.py
archive/agents_v1/tools/: odds_connector.py  sportsipy_connector.py
archive/configs_old/afa_v9/: agents.yaml  skills.yaml  system.yaml
archive/execution_tools_v1/: atomic_skills.py  betting_ledger.py  parlay_rules_engine.py  simulated_ticket.py  ticket_builder.py  zsa_front_runner.py
archive/tools_old/: afa_cli.py  afa_daily_report.py  afa_mcp_server.py  afa_toolkit.py
demos/: analyze_duplicate_files.py  backup_rules.py  check_backups.py  demo_ai_native_optimized.py  demo_complete_afa_v9.py  demo_mcp_tools.py  demo_new_features.py  full_system_stress_test.py  generate_play_type_files.py  perfect_test_victory.py  quick_comprehensive_test.py  test_play_types_split.py  verify_all_rules.py  verify_backup.py  verify_betting_rules.py  verify_mcn_complete.py  verify_rules_complete.py
docs/: AI_NATIVE_OPTIMIZATION_SUMMARY.md  CODE_REVIEW_CHECKLIST.md  IMPROVEMENT_PLAN.md  INTEGRATION_ARCHITECTURE_v9.md  MODULE_INDEX.md
docs/knowledge/: beidan-rules.md  jingcai-rules.md  lottery-rules.md
docs/superpowers/plans/: 2026-05-09-afa-v9-architecture-refactor.md
scripts/: ai_native_assessment.py  analyze_historical_data.py  backtest_validator.py  backtest_with_real_data.py  check_architecture.py  cleanup_git.sh  deep_analyze_data.py  full_system_test.py  run_afa_analysis.py  test_data_capabilities.py  test_mcp_tools.py  test_workflow_execution.py  train_historical_models.py  vectorize_historical_data.py
scripts/archive/: complete_ai_native_runner.py  complete_ai_native_system.py  demo_ai_native_real_data.py  demo_real_data_simple.py  final_optimized_system.py  full_12_play_types_system.py  professional_complete_system.py  quick_complete_optimization.py  task_1_2_3_4_complete.py
src/: __init__.py  __main__.py
src/afa_v9/: __init__.py  backtest.py  consciousness.py  thinker.py
src/afa_v9/agents/: __init__.py  adaptive_learning.py  base.py  collaboration.py  historical_agent.py  historical_mixin.py
src/afa_v9/ai_augmented/: __init__.py  ai_native_historical.py  ai_native_poisson.py  augmented_data.py  augmented_execution.py  augmented_memory.py  augmented_modules.py  augmented_search.py  core_upgrades.py  mcp_tools.py  rules_driven_decision.py
src/afa_v9/data_sources/: __init__.py  base.py  config.py  football_sources.py  odds_sources.py  pipeline.py  weather_sources.py
src/afa_v9/evolution/: __init__.py  cli.py  data_accumulator.py
src/afa_v9/execution/: __init__.py  bankroll.py  engine.py  recorder.py  tracker.py
src/afa_v9/heartbeat/: __init__.py
src/afa_v9/langgraph_adapter/: __init__.py
src/afa_v9/memory/: __init__.py  episodic_store.py  fts5_search.py  long_term.py  memory_search.py  short_term.py  unified.py
src/calculations/: __init__.py
src/cli/: analyze.py  cluster_chat.py  daemon.py
src/config/: __init__.py  config_loader.py  config_manager.py
src/core/: api_clients.py  data_contract.py  domain_kernel.py  event_bus.py  experience_loop.py  http_async_client.py  match_identity.py  mcp_discoverer.py  memory_retriever.py  recommendation_schema.py  ticket_schema.py
src/tools/: tool_registry_v2.py
tests/: conftest.py  test_afa_system.py  test_afa_tools.py  test_all_game_types.py  test_complete_system.py  test_evolution_v8.py  test_full_integration.py  test_pro.py  test_pro_complete.py  test_simple.py
tests/integration/: test_afa_v9_complete.py
(+166 files in other folders)
