[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-football-analyzer"
version = "1.0.0"
description = "AI-powered autonomous football analysis and betting system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AFA Team"}
]
keywords = ["football", "betting", "ai", "langgraph", "analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb>=0.4.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.1",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "qrcode[pil]>=7.4.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "langgraph>=0.0.26",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "mcp>=0.1.0",
    "browser-use>=0.1.0",
    "playwright>=1.40.0",
    "ddgs>=7.0.0",
    "duckduckgo_search>=5.0.0",
    "fastmcp>=3.0.0",
    "httpx-sse>=0.4.0",
    "onnxruntime>=1.15.0",
    "sentry-sdk[fastapi]>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "flake8>=6.0.0,<8.0.0",
    "black>=23.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
]

docs = [
    "sphinx>=7.0.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]

monitoring = [
    "prometheus-client>=0.19.0,<1.0.0",
    "grafana-api>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/agentic-football-analyzer"
Documentation = "https://github.com/your-org/agentic-football-analyzer#readme"
Repository = "https://github.com/your-org/agentic-football-analyzer.git"
Issues = "https://github.com/your-org/agentic-football-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["afa_v9*", "calculations*", "core*", "tools*", "cli*", "config*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | standalone_workspace/workspace
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_unreachable = false
strict_equality = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "langgraph.*",
    "langchain.*",
    "torch.*",
    "onnxruntime.*",
    "playwright.*",
    "browser_use.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --tb=short --strict-markers"
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]
